# lead-gen

./: .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt
frontend/: index.html  script.js  style.css
src/: deduplicator.py  enricher.py  extractor.py  main.py  scorer.py  scraper.py
tests/: test_deduplicator.py  test_scorer.py
